# mihomosh

./: .gitignore  Cargo.toml  Changes.md  README.md  release-notes.md
.github/workflows/: ci.yaml
src/: main.rs
src/arg/: config.rs  ctrl.rs  mod.rs  profile.rs  show.rs  status.rs
src/cmd/: config.rs  ctrl.rs  mod.rs  profile.rs  show.rs  status.rs  test.rs
src/data/: config.rs
src/data/profile/: config.rs  meta.rs  metas.rs  mod.rs
src/includes/: default_config.yaml  default_profile.yaml
src/utils/: api.rs  file.rs  highlight.rs  mod.rs  path.rs  prompt.rs  result.rs
