[package]
name = "mihomosh"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0.95"
boa_engine = "0.20.0"
boa_runtime = "0.20.0"
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["derive"] }
console = "0.15.10"
directories = "6.0.0"
hex = "0.4.3"
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.12", default-features = false, features = [
  "rustls-tls-native-roots",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
serde_yaml = "0.9.34"
syntect = "5.2.0"
tempfile = "3.15.0"
tokio = { version = "1.43.0", default-features = false, features = [
  "macros",
  "rt-multi-thread",
] }
url = { version = "2.5.4", features = ["serde"] }
urlencoding = "2.1.3"
